--- a/PNR Finisher.vbproj
+++ b/PNR Finisher.vbproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -12,7 +12,7 @@
     <AssemblyName>PNRFinisher</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <OptionExplicit>On</OptionExplicit>
     <OptionCompare>Binary</OptionCompare>
     <OptionStrict>Off</OptionStrict>
@@ -59,6 +59,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <CodeAnalysisRuleSet>PNR Finisher.ruleset</CodeAnalysisRuleSet>
     <UseVSHostingProcess>true</UseVSHostingProcess>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -69,6 +70,7 @@
     <DocumentationFile>PNRFinisher.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
     <CodeAnalysisRuleSet>PNR Finisher.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Forms\ATPI PNR.ico</ApplicationIcon>
@@ -95,6 +97,12 @@
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="Travelport.Smartpoint">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Travelport\Smartpoint\Travelport.Smartpoint.dll</HintPath>
+    </Reference>
+    <Reference Include="Travelport.TravelData">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Travelport\Smartpoint\Travelport.TravelData.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -111,11 +119,14 @@
   <ItemGroup>
     <Compile Include="Classes\AirlineNotes.vb" />
     <Compile Include="Classes\AirlinePoints.vb" />
+    <Compile Include="Classes\AirlinePoints1G.vb" />
     <Compile Include="Classes\Alerts.vb" />
-    <Compile Include="Classes\AmadeusExisting.vb" />
-    <Compile Include="Classes\AmadeusNew.vb" />
-    <Compile Include="Classes\AmadeusTickets.vb" />
-    <Compile Include="Classes\AmadeusUser.vb" />
+    <Compile Include="Classes\ConditionalGDSEntry.vb" />
+    <Compile Include="Classes\Config_GDSReferences.vb" />
+    <Compile Include="Classes\GDSExisting.vb" />
+    <Compile Include="Classes\GDSNew.vb" />
+    <Compile Include="Classes\GDSTickets.vb" />
+    <Compile Include="Classes\GDSUser.vb" />
     <Compile Include="Classes\BackOffice.vb" />
     <Compile Include="Classes\CloseOffEntries.vb" />
     <Compile Include="Classes\Config.vb" />
@@ -128,10 +139,11 @@
     <Compile Include="Classes\GreekToLatin.vb" />
     <Compile Include="Classes\Airlines.vb" />
     <Compile Include="Classes\Airports.vb" />
-    <Compile Include="Classes\AmadeusNumberParser.vb" />
-    <Compile Include="Classes\AmadeusPax.vb" />
-    <Compile Include="Classes\AmadeusPNR.vb" />
-    <Compile Include="Classes\AmadeusSeg.vb" />
+    <Compile Include="Classes\GDSNumberParser.vb" />
+    <Compile Include="Classes\GDSPax.vb" />
+    <Compile Include="Classes\GDSPnr.vb" />
+    <Compile Include="Classes\GDSSeg.vb" />
+    <Compile Include="Classes\ItnRTBDoc.vb" />
     <Compile Include="Classes\OsmLOG.vb" />
     <Compile Include="Classes\Ticket.vb" />
     <Compile Include="Classes\osmVessels.vb" />
@@ -143,6 +155,12 @@
       <DependentUpon>frmAdmin.vb</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmAdmin.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmAPISPax.Designer.vb">
+      <DependentUpon>frmAPISPax.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmAPISPax.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\frmCostCentre.Designer.vb">
@@ -201,6 +219,7 @@
     </Compile>
     <Compile Include="Classes\PaxApisDB.vb" />
     <Compile Include="GlobalSuppressions.vb" />
+    <Compile Include="Modules\mod1A.vb" />
     <Compile Include="Modules\modPNR.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -222,6 +241,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Forms\frmAdmin.resx">
       <DependentUpon>frmAdmin.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmAPISPax.resx">
+      <DependentUpon>frmAPISPax.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmCostCentre.resx">
       <DependentUpon>frmCostCentre.vb</DependentUpon>
